# kw_drf_healthy_habit_tracker

./: Dockerfile  README.md  docker-compose.yaml  env.sample  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  sesrializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_alter_habit_options_remove_habit_created_at_and_more.py  0004_alter_habit_reward.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
