[tool.poetry]
name = "kw-drf-healthy-habit-tracker"
version = "0.1.0"
description = ""
authors = ["KonstantinMikheev <mikhey17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
pillow = "^11.0.0"
ipython = "^8.29.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-stubs = "^5.1.1"
djangorestframework-simplejwt = "^5.3.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
celery = "^5.4.0"
redis = "^5.2.0"
pytz = "^2024.2"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
